[package]
name = "rust_masscan"
version = "0.1.0"
edition = "2018"
authors = ["leen.zhou.cn<leen.zhou.cn@gmail.com>"]
description = "A module for masscan."
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"